--- a/_config.yml
+++ b/_config.yml
@@ -16,7 +16,8 @@ permalink: pretty
 paginate: 5
 exclude: ["node_modules"]
 
-markdown: redcarpet
+#markdown: redcarpet
+markdown: kramdown
 redcarpet:
   extensions: ["tables", "fenced_code_blocks"]
 
