--- a/_config.yml
+++ b/_config.yml
@@ -11,7 +11,8 @@ highlighter: pygments
 
 # Build settings
 # markdown: kramdown
-highlighter: pygments
+# highlighter: pygments
+highlighter: rouge
 permalink: pretty
 paginate: 5
 exclude: ["node_modules"]
