--- a/_config.yml
+++ b/_config.yml
@@ -11,14 +11,14 @@ highlighter: pygments
 
 # Build settings
 # markdown: kramdown
-highlighter: pygments
-# highlighter: rouge
+#highlighter: pygments
+highlighter: rouge
 permalink: pretty
 paginate: 5
 exclude: ["node_modules"]
 
-markdown: redcarpet
-# markdown: kramdown
+#markdown: redcarpet
+markdown: kramdown
 redcarpet:
   extensions: ["tables", "fenced_code_blocks"]
 
